<resources>
    <string name="app_name">GitCat</string>

    <!-- 로그인 화면 -->
    <string name="main_subtext">고양이와 함께하는 일일커밋</string>
    <string name="main_startButton">Github 계정으로 시작하기</string>

    <!-- 레포 권한 화면 -->
    <string name="repo_mainText">Repository 권한 설정</string>
    <string name="repo_subText">GitCat에서 커믹 내역을 수집하기 위해\n
    접근할 GitHub Repository의 범위를 설정해주세요!</string>
    <string name="repo_subText2">(범위 설정은 추후 설정 메뉴에서 변경 가능합니다)</string>
    <string name="repo_public_mainText">Public Repository만 반영하기</string>
    <string name="repo_public_subText">GitHub 계정에 public으로 공개된\n
    repository만 반영합니다</string>
    <string name="repo_public_warning">** Private Repository의 커밋은 반영되지 않습니다 **</string>
    <string name="repo_private_mainText">Private Repository도 반영하기</string>
    <string name="repo_private_subText">GitHub 계정의 모든\n
repository를 반영합니다.</string>
    <string name="repo_private_warning">** Private Repository 접근을 위해 읽기/쓰기가 포함된 **\n
Full-Access 권한이 요청되지만, 실제로는 읽기 권한만 활용됩니다.</string>
    <string name="repo_nextButton">설정 완료</string>

    <!-- 정보 입력 화면 -->
    <string name="info1_mainText">개발자님에 대해 더 알고싶어요!</string>
    <string name="info1_subText">개인 정보는 통계 이외의 다른 용도로 사용되지 않아요.</string>
    <string name="info1_genderText">성별을 알려주세요</string>
    <string name="info1_gender1">여자</string>
    <string name="info1_gender2">남자</string>
    <string name="info1_gender3">기타</string>
    <string name="info1_nextButton">다음으로</string>
    <string name="info1_birthText">생년월일을 알려주세요</string>
    <string name="info3_mainText">개발을 하신 지 얼마나 되었나요?"</string>
    <string name="info3_subText">더 나은 깃캣이 되기 위한, 사용자 현황 파악의 목적입니다 :)</string>
    <string name="info3_radio1">개발에 관심이 있음</string>
    <string name="info3_radio2">관련 학부생/대학원생</string>
    <string name="info3_radio3">1년차</string>
    <string name="info3_radio4">3년차</string>
    <string name="info3_radio5">5년차 이상</string>
    <!--info4-->
    <string name="info4_mainText">함께 할 고양이를 선택해주세요!</string>
    <string name="info4_subText">즐거운 커밋을 위해 우리 모두 집사가 되어보아요~</string>
    <string name="info4_tab1">기본</string>
    <string name="info4_tab2">스페셜</string>
    <string name="info4_waitMainText">준비중입니다</string>
    <string name="info4_waitSubText">열심히 만드는 중이에요.\n얼른 올게요!</string>
    <string name="info4_newMainText">새로운 고양씨!</string>
    <string name="info4_hideMainText">숨겨진 고양씨!</string>
    <string name="info4_hideSubText">3명의 고양씨를 졸업시키면\n만날 수 있어요!</string>
    <string name="info4_nextButton">다음으로</string>
    <string name="info5_mainText">고양이 이름을 정해주세요</string>
    <string name="info5_subText">귀여운 이름 부탁한다냥!</string>
    <string name="info5_maxText">최대 5자까지</string>
    <string name="info5_nextButton">시작하기</string>

    <!-- 홈화면 -->
    <string name="nav_calendar">커밋달력</string>
    <string name="nav_home">홈화면</string>
    <string name="nav_report">리포트</string>
    <string name="home_refresh">화면 새로고침</string>
    <string name="home_nullButton">고양이 다시 선택하러 가기</string>
    <string name="home_todayCommit">오늘의 커밋</string>
    <string name="home_commitCount">개</string>
    <string name="home_now_score">점을 획득했어요!</string>
    <string name="home_today_score">(오늘 득점은</string>
    <string name="home_item_score1">이 되려면</string>
    <string name="home_item_score2">점이 필요해요!</string>
    <string name="home_gradu_score">- 졸업까지</string>

    <!-- 홈화면 팝업 -->
    <string name="leave_mainText">[속보] 고양씨 떠나다...</string>
    <string name="leave_text1">저런!</string>
    <string name="leave_text2">씨가 떠나고 말았어요.</string>
    <string name="leave_text3">앞으로 다른 고양씨들도</string>
    <string name="leave_text4">떠나보내지 않으려면\n조금 더 꾸준한 커밋이 필요해요.</string>
    <string name="gradu_mainText">졸업을 축하해요!</string>
    <string name="gradu_text1">축하합니다~!</string>
    <string name="gradu_text2">씨가 졸업하게되었어요.</string>
    <string name="gradu_text3">그동안 수고하셨어요:)</string>
    <string name="gradu_button">확인하러 가기</string>
    <string name="upgrade_mainText">아이템 업그레이드!</string>
    <string name="upgrade_text1">씨의 아이템이</string>
    <string name="upgrade_text2">업그레이드 되었어요.</string>
    <string name="upgrade_text3">개발이 좀 더 수월해지겠어요!</string>
    <!-- 튜토리얼 -->
    <string name="tu_first_mainText">커밋으로 고양씨 성장시키기</string>
    <string name="tu_first_subText">매일 꾸준히 커밋해보세요.\n고양씨의 개발환경이 4단계에 걸쳐 개선됩니다.</string>
    <string name="tu_second_mainText">고양씨 졸업시키기</string>
    <string name="tu_second_subText">4단계 고양씨는 졸업하게 되지만, 걱정 마세요!\n우측 상단의 수집 버튼을 통해 졸업앨범을 볼 수 있어요.</string>
    <string name="tu_second_etcText">고양이 수집 내역 버튼</string>
    <string name="tu_third_mainText">달력과 리포트로 나의 개발 돌아보기</string>
    <string name="tu_third_subText">하단의 커밋달력을 통해 일일 커밋 현황을,\n레포트를 통해 매달 개발 통계를 확인할 수 있어요.</string>
    <string name="tu_third_etcText">이번달 커밋 현황 \u0026 월별 커밋 통계</string>
    <string name="tu_fourth_mainText">튜토리얼 진행하고 고양이 받기</string>
    <string name="tu_fourth_button">튜토리얼 시작하기</string>
    <!-- 점수 팝업 -->
    <string name="home_score_mainText">잠깐!\n점수는 어떻게 얻나요?</string>
    <string name="home_score_subText">- 고양씨를 생성한 이후 커밋을 했다면,\n   1점을 얻을 수 있어요.\n\n- 5개 이상의 커밋을 하면, 1점을 추가로\n   획득할 수 있어요.\n\n* 첫 고양씨는 커밋으로 1점만 획득해도\n  졸업할 수 있지만, 다음 고양씨부터는</string>
    <string name="home_score_subBoldText">  점점 난이도가 올라갑니다!</string>
    <string name="home_score_lastText"> 화이팅!</string>

    <!-- 설정화면 -->
    <string name="settings_ca1">설정</string>
    <string name="settings_ca1_account">Github 계정 관리</string>
    <string name="settings_ca1_account2">연동된 깃 계정을 관리합니다.</string>
    <string name="settings_ca1_repo">GitHub Repository 권한 변경</string>
    <string name="settings_ca1_repo2">커밋 내역 수집을 위해 접근할 GitHub Repository 범위를 변경합니다.</string>
    <string name="settings_ca1_alarm">알림 설정</string>
    <string name="settings_ca1_alarm2">앱 내 알림을 조정합니다.</string>
    <string name="settings_ca1_reset">고양씨 초기화</string>
    <string name="settings_ca1_reset2">현재 육성중인 고양씨를 초기화합니다.</string>
    <string name="settings_ca2">기타</string>
    <string name="settings_ca2_dev">개발자 소개</string>
    <string name="settings_ca2_app">앱 평점주기 / 리뷰</string>
    <string name="settings_ca2_insta">깃캣 인스타그램</string>
    <string name="settings_popup_yes">확인</string>
    <string name="settings_popup_no">취소</string>
    <string name="settings_popup_reset1">고양이 초기화</string>
    <string name="settings_popup_reset2">귀여운 고양이들을 보내시겠습니까?\n한 번 떠난 고양이는 되돌아오지 못합니다!</string>
    <string name="settings_popup_repo1">접근 권한 변경</string>
    <string name="settings_popup_repo2">기존의 </string>
    <string name="settings_popup_repo3">권한을 변경하시겠습니까?\n\n*재로그인이 필요합니다</string>
    <string name="settings_popup_signout1">계정 로그아웃</string>
    <string name="settings_popup_signout2">현재 로그인 되어 있는 Github계정을\n로그아웃 하시겠습니까?</string>
    <string name="settings_popup_delete1">GitCat 탈퇴하기</string>
    <string name="settings_popup_delete2">GitCat 내의 모든 정보를 삭제하고\n정말로 탈퇴하시겠습니까?\n사라진 계정 정보는 복구할 수 없습니다!</string>
    <string name="settings_account">로그인 계정</string>
    <string name="settings_account_signout1">계정 로그아웃</string>
    <string name="settings_account_signout2">다른 계정으로 로그인합니다.</string>
    <string name="settings_account_delete">GitCat 탈퇴하기</string>
    <string name="settings_alarm1">앱 알림 받기</string>
    <string name="settings_alarm2">앱에서 보내는 다양한 푸시알림을 받습니다.</string>
    <string name="settings_alarm_on">알림이 활성화되었습니다</string>
    <string name="settings_alarm_off">알림이 비활성화되었습니다</string>
    <!-- 개발자 소개 -->

    <!-- 커밋달력 -->
    <string name="calendar_main">커밋달력</string>
    <string name="calendar_count0">0개</string>
    <string name="calendar_count1">1~5개</string>
    <string name="calendar_count2">6~10개</string>
    <string name="calendar_count3">11~15개</string>
    <string name="calendar_noCommit">커밋 기록이 없습니다!</string>
    <string name="calendar_today">오늘의 커밋</string>
    <string name="calendar_score">얻은 점수</string>
    <string name="calendar_total">총 커밋수</string>
    <string name="calendar_item">얻은 아이템</string>
    <string name="calendar_itemNo">없음!</string>
    <string name="calendar_commitHistory">커밋 내역 상세</string>

    <!-- 리포트 -->
    <string name="report_main">리포트</string>
    <string name="report_totalCommit">총 커밋수</string>
    <string name="report_lang">주 사용 언어</string>

    <!-- 리포트 차트 -->
    <string name="chart_lastMonth">지난달 대비</string>
    <string name="chart_totalCommit">총 커밋수</string>
    <string name="chart_oneDay">하루 평균</string>
    <string name="chart_commitStats">커밋수 통계</string>
    <string name="chart_langStats">사용 언어 비율</string>
    <string name="chart_langPie">언어비율\n(%)</string>
    <string name="chart_repoStats">기여 레파지토리</string>
    <string name="chart_comments">이번달 세줄평</string>

    <!-- 냥콜렉션 -->
    <string name="collection_mainText">냥콜렉션</string>
    <string name="collection_nameText">- 이름 :</string>

</resources>
