<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <Preference
            android:title="@string/settings_account"
            android:key="login_account"
            android:layout="@layout/settings_content"
            app:iconSpaceReserved="false"
            app:allowDividerBelow="true"
            app:allowDividerAbove="true" />

        <Preference
            android:key="logout"
            android:summary="@string/settings_account_signout2"
            android:layout="@layout/settings_content"
            app:iconSpaceReserved="false"
            app:allowDividerBelow="true"
            app:allowDividerAbove="true" />

        <Preference
            android:key="withdraw"
            android:title="@string/settings_account_delete"
            android:layout="@layout/settings_content"
            app:iconSpaceReserved="false"
            app:allowDividerBelow="true"
            app:allowDividerAbove="true" />

</PreferenceScreen>