<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ScoreDialogFragment"
    android:background="@drawable/info_list">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <ImageView
            android:id="@+id/img_btn_score_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_modulex"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_score_mainText"
            android:textColor="@color/colorTextDark"
            android:textSize="20sp"
            android:fontFamily="@font/bbtree_b"
            android:layout_marginTop="24dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_btn_score_back" />

        <TextView
            android:id="@+id/txt_score_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/bbtree_r"
            android:text="@string/home_score_subText"
            android:textColor="@color/colorTextDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_score_title" />

        <TextView
            android:id="@+id/txt_score_content2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bbtree_b"
            android:text="@string/home_score_subBoldText"
            android:textColor="@color/colorTextDark"
            android:textSize="14sp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_score_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_score_content" />

        <TextView
            android:id="@+id/txt_score_content3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bbtree_r"
            android:text="@string/home_score_lastText"
            android:textColor="@color/colorTextDark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_score_content2"
            app:layout_constraintStart_toEndOf="@+id/txt_score_content2"
            app:layout_constraintTop_toTopOf="@+id/txt_score_content2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>